- Add `preferred_blitter` argument to `NewGRF` constructor, possible values `NewGRF.BLITTER_BPP_8` and `NewGRF.BLITTER_BPP_32`.
- Add `StringManager.get_persistent_id` function to register strings in "persistent" range (0xDCxx).
- Add `Sprite.save_gif` method to generate palette animated images.
- Add init_id_map command line command to initialize id_map.json.
- Start auto-assiged IDs from 0 for INDUSTRY_TILE feature.
- Remove `Mask` offset, add `FileMask` absolute positioning.
- Rename `AlternativeSprites.get_zoom` to `get_sprite` and add bpp argument.

- lib: Fix `CallbackManager.make_switches` for non-vehicle features.
- lib: Fix incorrect 2cc colors for auto-articulated parts.
- lib: Fix unicode vehicle names.
- lib: Set correct flags and track_type on auto-articulated parts.
- lib: `CallbackManager` rewrite:
	- Support all features (non-vehicles may still be incomplete).
	- Make `CallbackManager` abstract class, use `make_callback_manager` function instead.
	- Support splitting callbacks for default and purchase branch with `DualCallback`.
	- Use `graphics.purchase` instead of `purchase_graphics` attribute.
- lib: Add `Ship.Flags` and `RoadVehicle.Flags` for unified access to flags.
- lib: Add `EngineOverride` sprite generator.

- grftopy: Fix missing sprite zoom
- grftopy: Improve decoding of industry layouts.

---------
0.2.2
---------

- Change license to GPL v2+ (same as nml) instead of v3 to allow reusing v2 code/resources.
- Fix graphics sprite composition.
- Fix Train weight Action 0 properties (low and high bytes).
- Fix compilation of generic var parameter in Action 2.
- Fix `var(...)` call in `Switch` code not accepting `param` value without parentheses.
- Fix default purchase sprite for auto-articulated trains.

- Rename `speed` Action 0 property for ships to `max_speed` for consinstency with other vehile types.
- Rename Action 0 ship properties to match nml:
	- `cargo_type` to `default_cargo_type`
	- `sound` to `sound_effect`